Completed Easy 295 challenge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
-project(DailyProgrammer)
+project(CPP_Practice)
 
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES driver.cpp)
-add_executable(DailyProgrammer ${SOURCE_FILES})
+add_executable(CPP_Practice ${SOURCE_FILES})
